welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    caseVerte = true;
              ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
  		gauche();
                      ^